# Ausbildungsnachweis-Generator

./: .gitignore  README.md  pyproject.toml
src/ausbildungsnachweis_mcp/: __init__.py  auth.py  credentials.py  einsatzplan.py  graph.py  pdffill.py  processing.py  schedule.py  server.py  sharepoint.py  untis.py
