[project]
name = "ausbildungsnachweis-mcp"
version = "0.1.0"
description = "MCP server that turns Microsoft Graph calendar events, the Ausbildungseinsatzplan and WebUntis school data into filled weekly training-report (Ausbildungsnachweis) PDFs."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "msal-extensions>=1.1.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
ausbildungsnachweis-mcp = "ausbildungsnachweis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ausbildungsnachweis_mcp"]
